--- a/README
+++ b/README
@@ -17,6 +17,11 @@ These SMS -objects are then broadcasted to Hook.IO cloud
 This is Hook.IO hook which listens for incoming messages and translates them to configured service implementation
 actions.
 
+# Testing
+
+Currently to do message parsing flow test run (inside the project dir) "./bin/incoming_server"
+and then on other terminal run "coffee tests/send_simple_sms.coffee"
+
 # Supported services
 
 * Labyrintti
