minor README changes

--- a/README
+++ b/README
@@ -4,13 +4,13 @@ This is SMS Gateway service built on top of Node.JS
 It is extendable to support multiple different SMS services and its main usage
 happens through Hook.IO hooks.
 
-## Server
+## Incoming
 
-Server will listen on defined port for incoming HTTP requests and pass the to configured service implementations,
-which parse the requests and convert them to SMS -message objects
+Server will listen on defined port for incoming HTTP requests and pass the requests to configured service implementations,
+which parse the requests and convert them to SMS or Delivery report -message objects
 These SMS -objects are then broadcasted to Hook.IO cloud
 
-## Client
+## Outgoing
 
 This is Hook.IO hook which listens for incoming messages and translates them to configured service implementation
 actions.
